--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ version: '2'
 
 services: 
     cfsd-mission-control:
-        image: mission-control:v0.0.0
+        image: chalmersfsd/cfsd-logic-lynx-mission-control:test-inspection5
         network_mode: "host"
-        command: "mission-control --cid=131 --frequency=1 --verbose"
+        command: " --cid=131 --frequency=1 --verbose"
