--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,4 @@ services:
         #image: chalmersfsd/cfsd-logic-lynx-mission-control:test-inspection5
         image: mission:latest
         network_mode: "host"
-        command: "--cid=131 --frequency=10 --inspectionTorqueReq=120 --braketestVelocityReq=12 --steeringReq=20 --missionTime=30 --verbose"
+        command: "--cid=131 --frequency=10 --braketestVelocityReq=12 --steeringReq=20 --missionTime=30 --verbose"
