Update acceleration, collector and others

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,9 +98,10 @@ add_executable(${PROJECT_NAME}  ${CMAKE_CURRENT_SOURCE_DIR}/src/${PROJECT_NAME}.
                                 ${CMAKE_CURRENT_SOURCE_DIR}/src/Mission-control.cpp 
                                 ${CMAKE_CURRENT_SOURCE_DIR}/src/Brake-test.cpp 
                                 ${CMAKE_CURRENT_SOURCE_DIR}/src/Inspection.cpp 
-                                ${CMAKE_CURRENT_SOURCE_DIR}/src/Autocross.cpp 
+                                ${CMAKE_CURRENT_SOURCE_DIR}/src/Acceleration.cpp 
                                 ${CMAKE_CURRENT_SOURCE_DIR}/src/Trackdrive.cpp 
                                 ${CMAKE_CURRENT_SOURCE_DIR}/src/Skidpad.cpp 
+                                ${CMAKE_CURRENT_SOURCE_DIR}/src/Manual.cpp 
                                 ${CMAKE_CURRENT_SOURCE_DIR}/src/collector.cpp 
                                 ${CMAKE_BINARY_DIR}/cluon-complete.hpp 
                                 ${CMAKE_BINARY_DIR}/opendlv-standard-message-set.hpp 
